include generated api types, add single tx disclosure api
